canvas.toBlob() does not work on transferred offscreen canvas
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox119 | --- | verified |
People
(Reporter: ckusuma, Assigned: aosmond)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36
Steps to reproduce:
- Unzip manual-worker-capture-canvas.zip and start a server on the folder
- Open "test.html"
- Click on "Capture Canvas To Image" button
Actual results:
The image capture of the canvas when the button is pressed is blank.
Expected results:
A properly filled image capture of the canvas should be displayed below the canvas. The expected behavior works on Chrome (tested in 108.0.5359.94).
| Reporter | ||
Comment 1•3 years ago
|
||
Auxillary bug: right when the test video loops, an exception is thrown from createImageBitmap() which is caught from the catch:
"DOMException: An attempt was made to use an object that is not, or is no longer, usable"
Chrome 108 also does not have this error thrown.
Comment 2•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Graphics: Canvas2D' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
| Reporter | ||
Updated•3 years ago
|
Updated•2 years ago
|
| Assignee | ||
Comment 5•2 years ago
•
|
||
Adjusting the test case to work with ToDataURL works with my patch in bug 1744854 (and in Chrome), so I just need to land that and do something similar for ToBlob.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 6•2 years ago
|
||
Depends on D130788
| Assignee | ||
Updated•2 years ago
|
Comment 8•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Comment 9•2 years ago
•
|
||
Reproduced with Fx 109.0a1(2022-12-08) on macOS 13.
Verified fixed with FX 120.0a1(2023-10-01) and Fx 119.0b3 on macOS 13.
Description
•