Bug 1804746 - Make HTMLCanvasElement's toBlob to work with OffscreenCanvas. r=gfx-reviewers,lsalzman

Depends on D130788

Differential Revision: https://phabricator.services.mozilla.com/D188546