dom/canvas/CanvasRenderingContextHelper.h
@@ -6,7 +6,9 @@
 #ifndef MOZILLA_DOM_CANVASRENDERINGCONTEXTHELPER_H_
 #define MOZILLA_DOM_CANVASRENDERINGCONTEXTHELPER_H_
 
+#include "mozilla/UniquePtr.h"
 #include "mozilla/dom/BindingDeclarations.h"
+#include "mozilla/gfx/Point.h"
 #include "mozilla/layers/LayersTypes.h"
 #include "nsSize.h"
 
@@ -63,6 +65,9 @@ class CanvasRenderingContextHelper {
   void ToBlob(EncodeCompleteCallback* aCallback, nsAString& aType,
               const nsAString& aEncodeOptions, bool aUsingCustomOptions,
               bool aUsePlaceholder, ErrorResult& aRv);
+
+  virtual UniquePtr<uint8_t[]> GetImageBuffer(int32_t* aOutFormat,
+                                              gfx::IntSize* aOutImageSize);
 
   already_AddRefed<nsISupports> GetOrCreateContext(
       JSContext* aCx, const nsAString& aContextId,
