dom/html/HTMLCanvasElement.h
@@ -326,6 +326,10 @@ class HTMLCanvasElement final : public nsGenericHTMLElement,
   nsresult ToDataURLImpl(JSContext* aCx, nsIPrincipal& aSubjectPrincipal,
                          const nsAString& aMimeType,
                          const JS::Value& aEncoderOptions, nsAString& aDataURL);
+
+  UniquePtr<uint8_t[]> GetImageBuffer(int32_t* aOutFormat,
+                                      gfx::IntSize* aOutImageSize) override;
+
   MOZ_CAN_RUN_SCRIPT void CallPrintCallback();
 
   virtual void AfterSetAttr(int32_t aNamespaceID, nsAtom* aName,
